punto 2 se agrega total de cafe blend y origen

--- a/src/app/coffee/coffee-list/coffee-list.component.html
+++ b/src/app/coffee/coffee-list/coffee-list.component.html
@@ -27,6 +27,10 @@
       </table>
     </div>
   </div>
+  <div class="row">
+    <p class="mb-0">Total café de origen: {{cantidadCafeOrigen}}</p>
+    <p >Total café de origen: {{cantidadCafeBlend}}</p>
+  </div>
 </div>
 
 <footer class="text-center text-lg-start">
